Update structure html

--- a/index.html
+++ b/index.html
@@ -11,11 +11,23 @@
         <div class="container">
             <h1>Accordion</h1>
             <button class="btn">Section 1</button>
-            <div class="panel"></div>
+            <div class="panel">
+                <p>Mangga</p>
+                <p>Jeruk</p>
+                <p>Anggur</p>
+            </div>
             <button class="btn">Section 2</button>
-            <div class="panel"></div>
+            <div class="panel">
+                <p>Mangga</p>
+                <p>Jeruk</p>
+                <p>Anggur</p>
+            </div>
             <button class="btn">Section 3</button>
-            <div class="panel"></div>
+            <div class="panel">
+                <p>Mangga</p>
+                <p>Jeruk</p>
+                <p>Anggur</p>
+            </div>
         </div>
     </div>
 </body>
